--- a/index.html
+++ b/index.html
@@ -1,195 +1,99 @@
 <!DOCTYPE html>
-<html lang="pt-br">
+<html>
 <head>
-<meta charset="UTF-8" />
-<meta name="viewport" content="width=device-width, initial-scale=1" />
-<title>Chat Firebase</title>
-<style>
-  body { font-family: Arial, sans-serif; margin: 20px; background: #f0f0f0; }
-  #loginArea, #chatArea { max-width: 600px; margin: auto; background: white; padding: 20px; border-radius: 8px; }
-  #chatArea { display: none; }
-  #messages { height: 300px; overflow-y: auto; border: 1px solid #ccc; padding: 10px; background: #fff; margin-bottom: 10px; }
-  .message { margin-bottom: 10px; }
-  img { max-width: 150px; max-height: 150px; display: block; margin-top: 5px; border-radius: 6px; }
-  #usersOnline { margin-bottom: 10px; font-weight: bold; }
-  button { cursor: pointer; padding: 6px 12px; margin-top: 5px; }
-</style>
+  <title>Chat Firebase</title>
+  <script src="https://www.gstatic.com/firebasejs/9.22.1/firebase-app-compat.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/9.22.1/firebase-database-compat.js"></script>
 </head>
 <body>
 
-<div id="loginArea">
-  <h2>Entrar no Chat</h2>
-  <input type="text" id="usernameInput" placeholder="Digite seu nome" />
-  <button id="btnLogin">Entrar</button>
-</div>
+  <div>
+    <div id="usersOnline">Usuários online: 0</div>
+  </div>
 
-<div id="chatArea">
-  <div id="usersOnline">Usuários online: 0</div>
   <div id="messages"></div>
-  
-  <input type="text" id="messageInput" placeholder="Digite sua mensagem" />
-  <input type="file" id="imageInput" accept="image/*" />
-  <button id="btnSend">Enviar</button>
-  <button id="btnLogout">Sair</button>
-</div>
 
-<!-- Firebase SDK -->
-<script src="https://www.gstatic.com/firebasejs/9.23.0/firebase-app-compat.js"></script>
-<script src="https://www.gstatic.com/firebasejs/9.23.0/firebase-database-compat.js"></script>
-<script src="https://www.gstatic.com/firebasejs/9.23.0/firebase-storage-compat.js"></script>
+  <input type="text" id="msgInput" placeholder="Digite sua mensagem" />
+  <button id="sendBtn">Enviar</button>
 
-<script>
-  // Config Firebase
-  const firebaseConfig = {
-    apiKey: "AIzaSyCL8S1BlDqcfBeRk6dJtd-ukDC0uwtHogo",
-    authDomain: "chat-9e78e.firebaseapp.com",
-    projectId: "chat-9e78e",
-    storageBucket: "chat-9e78e.appspot.com",
-    messagingSenderId: "1087471527921",
-    appId: "1:1087471527921:web:9fe8d3e2a4bf78bc5d4650",
-    measurementId: "G-V54VKM906H"
-  };
+  <script>
+    // Config Firebase - seu config correto aqui!
+    const firebaseConfig = {
+      apiKey: "AIzaSyCL8S1BlDqcfBeRk6dJtd-ukDC0uwtHogo",
+      authDomain: "chat-9e78e.firebaseapp.com",
+      databaseURL: "https://chat-9e78e-default-rtdb.firebaseio.com",
+      projectId: "chat-9e78e",
+      storageBucket: "chat-9e78e.appspot.com",
+      messagingSenderId: "1087471527921",
+      appId: "1:1087471527921:web:9fe8d3e2a4bf78bc5d4650",
+      measurementId: "G-V54VKM906H"
+    };
 
-  firebase.initializeApp(firebaseConfig);
-  const db = firebase.database();
-  const storage = firebase.storage();
+    // Initialize Firebase
+    firebase.initializeApp(firebaseConfig);
+    const db = firebase.database();
 
-  let currentUser = null;
-  let currentUserId = null;
+    // Pede nome do usuário e guarda id no localStorage
+    let username = localStorage.getItem('username');
+    if (!username) {
+      username = prompt('Qual seu nome?');
+      if (!username) username = 'Anon';
+      localStorage.setItem('username', username);
+    }
 
-  const loginArea = document.getElementById('loginArea');
-  const chatArea = document.getElementById('chatArea');
-  const usersOnlineDiv = document.getElementById('usersOnline');
-  const messagesDiv = document.getElementById('messages');
+    // Gera um userId único e salva no localStorage para controlar presença
+    let userId = localStorage.getItem('userId');
+    if (!userId) {
+      userId = Date.now().toString() + Math.floor(Math.random() * 1000);
+      localStorage.setItem('userId', userId);
+    }
 
-  // Função para entrar no chat (com nome e id)
-  function enterChat(username, userId) {
-    currentUser = username;
-    currentUserId = userId;
-
-    const userRef = db.ref('users/' + currentUserId);
-    userRef.set({ username: currentUser, online: true });
+    // Marca usuário como online no DB
+    const userRef = db.ref('users/' + userId);
+    userRef.set({ username: username, online: true });
     userRef.onDisconnect().remove();
 
-    loginArea.style.display = 'none';
-    chatArea.style.display = 'block';
+    // Escuta usuários online e atualiza contador
+    db.ref('users').on('value', snapshot => {
+      const users = snapshot.val() || {};
+      const onlineUsers = Object.values(users).filter(u => u.online).length;
+      document.getElementById('usersOnline').innerText = 'Usuários online: ' + onlineUsers;
+    });
 
-    listenUsers();
-    listenMessages();
-  }
-
-  // Ao carregar a página, checa localStorage
-  window.onload = () => {
-    const savedName = localStorage.getItem('chatUsername');
-    const savedId = localStorage.getItem('chatUserId');
-
-    if (savedName && savedId) {
-      enterChat(savedName, savedId);
-    }
-  };
-
-  // Login botão
-  document.getElementById('btnLogin').onclick = () => {
-    const username = document.getElementById('usernameInput').value.trim();
-    if (!username) {
-      alert('Digite seu nome para entrar');
-      return;
-    }
-    // Gerar ID e salvar no localStorage
-    const userId = 'user_' + Math.random().toString(36).substr(2, 9);
-    localStorage.setItem('chatUsername', username);
-    localStorage.setItem('chatUserId', userId);
-
-    enterChat(username, userId);
-  };
-
-  // Logout botão
-  document.getElementById('btnLogout').onclick = () => {
-    if (currentUserId) {
-      db.ref('users/' + currentUserId).remove();
-    }
-    currentUser = null;
-    currentUserId = null;
-    localStorage.removeItem('chatUsername');
-    localStorage.removeItem('chatUserId');
-    messagesDiv.innerHTML = '';
-    usersOnlineDiv.textContent = 'Usuários online: 0';
-    chatArea.style.display = 'none';
-    loginArea.style.display = 'block';
-  };
-
-  // Enviar mensagem
-  document.getElementById('btnSend').onclick = () => {
-    const text = document.getElementById('messageInput').value.trim();
-    const imageFile = document.getElementById('imageInput').files[0];
-
-    if (!text && !imageFile) {
-      alert('Digite uma mensagem ou selecione uma imagem');
-      return;
+    // Função para mostrar mensagens na tela
+    function showMessages(messages) {
+      const div = document.getElementById('messages');
+      div.innerHTML = '';
+      for (const key in messages) {
+        const msg = messages[key];
+        const p = document.createElement('p');
+        p.textContent = `${msg.username}: ${msg.text}`;
+        div.appendChild(p);
+      }
+      div.scrollTop = div.scrollHeight;
     }
 
-    if (imageFile) {
-      const path = 'images/' + currentUserId + '_' + Date.now() + '_' + imageFile.name;
-      const uploadTask = storage.ref(path).put(imageFile);
+    // Escuta mensagens no DB
+    db.ref('messages').on('value', snapshot => {
+      const messages = snapshot.val() || {};
+      showMessages(messages);
+    });
 
-      uploadTask.on('state_changed', null, (error) => {
-        alert('Erro no upload: ' + error.message);
-      }, () => {
-        uploadTask.snapshot.ref.getDownloadURL().then((url) => {
-          sendMessage(text, url);
-        });
+    // Envia mensagem ao clicar no botão
+    document.getElementById('sendBtn').onclick = () => {
+      const input = document.getElementById('msgInput');
+      const text = input.value.trim();
+      if (!text) return;
+      const newMsgRef = db.ref('messages').push();
+      newMsgRef.set({
+        username: username,
+        text: text,
+        timestamp: Date.now()
       });
-    } else {
-      sendMessage(text, null);
-    }
+      input.value = '';
+    };
 
-    document.getElementById('messageInput').value = '';
-    document.getElementById('imageInput').value = '';
-  };
-
-  function sendMessage(text, imageUrl) {
-    const msgRef = db.ref('messages');
-    msgRef.push({
-      senderId: currentUserId,
-      senderName: currentUser,
-      text: text || '',
-      imageUrl: imageUrl || null,
-      timestamp: Date.now()
-    });
-  }
-
-  function listenMessages() {
-    const msgRef = db.ref('messages');
-    msgRef.off();
-    msgRef.on('child_added', snapshot => {
-      const msg = snapshot.val();
-      displayMessage(msg);
-    });
-  }
-
-  function displayMessage(msg) {
-    const div = document.createElement('div');
-    div.classList.add('message');
-
-    let content = `<strong>${msg.senderName}:</strong> ${msg.text || ''}`;
-    if (msg.imageUrl) {
-      content += `<br/><img src="${msg.imageUrl}" alt="imagem enviada" />`;
-    }
-    div.innerHTML = content;
-    messagesDiv.appendChild(div);
-    messagesDiv.scrollTop = messagesDiv.scrollHeight;
-  }
-
-  function listenUsers() {
-    const usersRef = db.ref('users');
-    usersRef.on('value', snapshot => {
-      const users = snapshot.val();
-      let count = 0;
-      if (users) count = Object.keys(users).length;
-      usersOnlineDiv.textContent = `Usuários online: ${count}`;
-    });
-  }
-</script>
+  </script>
 
 </body>
 </html>
